kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard-canonical
  annotations:
    gatus.home-operations.com/endpoint: |
      name: rook
      group: rook-ceph
spec:
  hostnames:
    - rook.jptr.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https-canon
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
